# WB_RAG_Sample

./: LICENSE  pyproject.toml  rag.py
