[tool.poetry]
name = "WB-Rag"
version = "0.1.0"
description = "Sample Rag solution for WB"
authors = ["Emerald Henry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
openai = "^1.23.6"
llama-index = "^0.10.33"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
gradio = "^4.44.0"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"